--- a/packages/document/docs/en/guide/basic/custom-page.mdx
+++ b/packages/document/docs/en/guide/basic/custom-page.mdx
@@ -167,6 +167,27 @@ import PageType from '@en/fragments/page-type';
 
 <PageType />
 
+## Custom tags
+
+### Customizing header tag
+
+In `rspress.config.ts`, you can edit HTML's metadata (aka header tag) on a page basis. We explain it with more details in [basic config](https://rspress.dev/api/config/config-frontmatter#head) within the api section.
+
+### Generate metadata for better SEO
+
+Within frontmatter, you can also customize your page's metadata tag for SEO optimization.
+
+For example, if you want to add `<meta name="description" content="A modern explaination of 'edge'" data-rh="true">` in your `<header>` tag, you can use frontmatter like so:
+
+```md title="*.mdx | *.md"
+---
+title: What does edge mean? ## This will customize your title in frontmatter
+description: A modern explaination of 'edge'
+---
+```
+
+Read more details on how to customize **open graph images (og:image)** and **open graph title (og:title)** can be seen here in [frontmatter config](https://rspress.dev/api/config/config-frontmatter#head).
+
 ### Using Fine-grained Switches
 
 In addition to the `pageType` page layout level configuration, Rspress also provides more fine-grained switches. You can configure other fields in the frontmatter. These fields and their meanings are as follows:
