docs: fix OG tags example

--- a/packages/document/docs/en/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/en/api/config/config-frontmatter.mdx
@@ -75,13 +75,13 @@ For example, you can use these headers to specify custom meta tags for [Open Gra
 ---
 head:
   - - meta
-    - name: og:title
+    - property: og:title
       content: The Rock
   - - meta
-    - name: og:url
+    - property: og:url
       content: https://www.imdb.com/title/tt0117500/
   - - meta
-    - name: og:image
+    - property: og:image
       content: https://ia.media-imdb.com/images/rock.jpg
 # - - [htmlTag]
 #   - [attributeName]: [attributeValue]
