--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -75,13 +75,13 @@ titleSuffix: '| 基于 Rspack 的静态站点生成器'
 ---
 head:
   - - meta
-    - name: og:title
+    - property: og:title
       content: The Rock
   - - meta
-    - name: og:url
+    - property: og:url
       content: https://www.imdb.com/title/tt0117500/
   - - meta
-    - name: og:image
+    - property: og:image
       content: https://ia.media-imdb.com/images/rock.jpg
 # - - [htmlTag]
 #   - [attributeName]: [attributeValue]
