--- a/packages/document/docs/en/fragments/internal-components.mdx
+++ b/packages/document/docs/en/fragments/internal-components.mdx
@@ -40,7 +40,7 @@ import { Helmet } from 'rspress/runtime';
 function App() {
   return (
     <Helmet>
-      <meta property="og:description" value="Out-of-box Rspack build tools" />
+      <meta property="og:description" content="Out-of-box Rspack build tools" />
     </Helmet>
   );
 }
